📝 Update .gitignore to exclude QIP-1 runtime reports
- Added qip1_reports/ directory to exclusions
- Prevents quantum handshake JSON reports and PNG visualizations from being committed
- These are runtime-generated files with timestamps that shouldn't be in version control

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,9 @@ roboto_learning_data.pkl
 roboto_learning_optimization.json
 roboto_memory.json
 
+# QIP-1 quantum handshake reports and visualizations
+qip1_reports/
+
 # Database files
 *.db
 *.sqlite
