--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,9 @@ qip1_reports/
 # QIP-2 GHZ ascension reports and visualizations
 qip2_reports/
 
+# QIP-3 VQE ascension reports and visualizations
+qip3_reports/
+
 # Database files
 *.db
 *.sqlite
